<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crea_una_cuenta"
            android:textSize="60sp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:fontFamily="@font/goodmatcha"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_los_datos_correspondientes"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/goodmatcha"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ingrese_su_nombre"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textPersonName"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ingrese_su_correo_electr_nico"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ingrese_una_contrase_a"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textVisiblePassword"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirme_su_contrase_a"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textPassword"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/btnCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/color_btn">

        </Button>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>